# openanim

./: .dockerignore  .gitignore  CMakeLists.txt  Cargo.toml  Philosophy.txt  README.md  _check_embed.py  analyze_pipeline.py  app.py  build_index.py  package.json  project.json  pyproject.toml
apps/: studio.cpp
backend/: __init__.py  _config.py  base.py  manim.py
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/diff/: Cargo.toml
crates/diff/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/engine_api/: Cargo.toml
crates/engine_api/src/: lib.rs
crates/graph/: Cargo.toml
crates/graph/src/: lib.rs
crates/hash/: Cargo.toml
crates/hash/src/: lib.rs
crates/hasher/: Cargo.toml
crates/hasher/src/: lib.rs
crates/ir/: Cargo.toml
crates/ir/src/: lib.rs
crates/llm_compiler/: Cargo.toml
crates/llm_compiler/src/: client.rs  compiler.rs  lib.rs  prompts.rs
crates/openanim/: Cargo.toml
crates/openanim/src/: main.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/assets/: 019e4b08-8dc9-7d13-a3ad-2e7abcffb9ba.mmd
crates/orchestrator/src/: cache.rs  lib.rs  runner.rs
crates/provider/: Cargo.toml
crates/provider/src/: lib.rs
crates/renderer_core/: Cargo.toml
crates/renderer_core/src/: adapter.rs  artifact.rs  lib.rs  plan.rs  registry.rs
crates/renderers/: Cargo.toml
crates/renderers/src/: ffmpeg.rs  lib.rs  manim.rs  mermaid.rs  remotion.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs
crates/scene_diff/: Cargo.toml
crates/scene_diff/src/: diff.rs  history.rs  lib.rs  patch.rs  snapshot.rs
crates/scene_graph/: Cargo.toml
crates/scene_graph/src/: builder.rs  dirty.rs  graph.rs  lib.rs  query.rs
crates/scene_ir/: Cargo.toml
crates/scene_ir/src/: components.rs  lib.rs  node.rs  project.rs  scene.rs  schema.rs  timeline.rs  types.rs  validation.rs
crates/studio/: Cargo.toml
crates/studio/src/: lib.rs  main.rs
docker/: Dockerfile.ffmpeg  Dockerfile.manim  Dockerfile.mermaid  Dockerfile.remotion  build.sh  docker-compose.yml
include/openanim/: agents.hpp  engine.hpp  hasher.hpp  llm.hpp  orchestrator.hpp  renderer.hpp  sandbox.hpp  scene_ir.hpp  types.hpp  validation.hpp
pipeline/: __init__.py  logger.py
rag/: __init__.py  embedder.py  indexer.py  retriever.py
src/: engine.cpp  hasher.cpp  llm.cpp  orchestrator.cpp  renderer.cpp  sandbox.cpp  scene_ir.cpp  types.cpp  validation.cpp
studio/: index.html  package-lock.json  package.json
studio/src/: App.css  App.tsx  index.css
tests/: core_tests.cpp  test_llm_e2e.cpp
