[workspace]
members = [
    "crates/scene_ir",
    "crates/scene_graph",
    "crates/scene_diff",
    "crates/hasher",
    "crates/renderer_core",
    "crates/renderers",
    "crates/orchestrator",
    "crates/llm_compiler",
    "crates/studio",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["OpenAnim Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/openanim/openanim"
rust-version = "1.85"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# IDs
uuid = { version = "1.0", features = ["v7", "serde"] }

# Schema
schemars = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Hashing
blake3 = "1.5"

# Data structures
slotmap = "1.0"
bitflags = "2.0"

# Async
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
scene_ir = { path = "crates/scene_ir" }
scene_graph = { path = "crates/scene_graph" }
scene_diff = { path = "crates/scene_diff" }
hasher = { path = "crates/hasher" }
renderer_core = { path = "crates/renderer_core" }
