[project]
name = "openanim"
version = "0.3.0"
description = "AI-powered animation generator with pluggable backends"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "manim>=0.19.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=14.3.3",
]

[tool.openanim.openrouter]
base_url = "https://openrouter.ai/api/v1"

[tool.openanim.llm]
model = "openrouter/free"

[tool.openanim.manim]
quality = "l"
output_file = "generated_scene.py"

[tool.openanim.healing]
max_attempts = 3
