[package]
name = "cli"
description = "OpenAnim command-line interface"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "openanim"
path = "src/main.rs"

[dependencies]
scene_ir = { workspace = true }
scene_graph = { path = "../scene_graph" }
scene_diff = { path = "../scene_diff" }
hasher = { path = "../hasher" }
renderer_core = { path = "../renderer_core" }
orchestrator = { path = "../orchestrator" }
studio = { path = "../studio" }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
webbrowser = "1.0"
