[package]
name = "llm_compiler"
description = "OpenAnim LLM compiler and planning agent core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
scene_ir = { path = "../scene_ir" }
scene_graph = { path = "../scene_graph" }
scene_diff = { path = "../scene_diff" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
