[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true

# Internal crates
scene_ir.workspace = true
scene_graph.workspace = true
renderer_core.workspace = true
hasher.workspace = true
renderers = { path = "../renderers" }

# External utilities
tempfile = "3.10"
