[package]
name = "renderers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
uuid.workspace = true

# Internal crates
scene_ir.workspace = true
scene_graph.workspace = true
renderer_core.workspace = true

# External utilities for code compilation / sandbox runner
tempfile = "3.10"

[features]
default = ["ffmpeg"]
ffmpeg = []
manim = []
mermaid = []
remotion = []
all = ["ffmpeg", "manim", "mermaid", "remotion"]
