[package]
name = "scene_graph"
description = "OpenAnim in-memory scene graph runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
scene_ir = { workspace = true }
slotmap = { workspace = true }
bitflags = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.0"
