[package]
name = "scene_ir"
description = "OpenAnim canonical scene intermediate representation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.0"
