[package]
name = "studio"
description = "OpenAnim Visual Local Web Studio Server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
scene_ir = { path = "../scene_ir" }
engine_api = { path = "../engine_api", features = ["all-renderers"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
axum = { version = "0.7" }
tower-http = { version = "0.5", features = ["cors"] }
